# ACS_DB

./: BUILD_RASPBERRYPI.md  CMakeLists.txt  README.md  db_descirp.md
cmake/: arm-linux-gnueabihf.cmake
config/: accessd.conf
database/: init_db.sh  init_db.sql
database/schema/: 01_users.sql  02_credentials.sql  03_devices.sql  04_doors.sql  05_readers.sql  06_schedules.sql  07_holidays.sql  08_access_rules.sql  09_events.sql  10_access_logs.sql  11_system_config.sql  12_system_state.sql
docs/: resolve_credential_diagram.md
include/: access_logger.hpp  access_rule_evaluator.hpp  config.hpp  credential_resolver.hpp  db_connection.hpp  decision_response.hpp  door_controller.hpp  event_logger.hpp  osdp_reader.hpp  rs485.hpp
scripts/: build_and_run.sh  build_on_pi.sh  deploy_accessd.bat  deploy_accessd.sh  deploy_all.bat  deploy_all.sh  deploy_to_pi.bat  deploy_to_pi.sh  install.sh  run_all_tests.sh  run_new_tests.sh  run_tests.sh
src/access/: access_rule_evaluator.cpp  credential_resolver.cpp
src/core/: config_loader.cpp  main.cpp
src/db/: db_connection.cpp
src/event/: access_logger.cpp  decision_response.cpp  door_controller.cpp  event_logger.cpp
src/osdp/: osdp_channel.cpp  osdp_commands.cpp  osdp_packet.cpp  osdp_security.cpp  serial_port.cpp
src/reader/: osdp_connection.cpp  rs485.cpp
test/: CMakeLists.txt  test_config.cpp
test/access/: test_access_rule_evaluator.cpp  test_credential_resolver.cpp
test/db/: test_db_connection.cpp
test/event/: test_access_logger.cpp  test_decision_response.cpp  test_door_controller.cpp  test_event_logger.cpp
test/reader/: test_osdp_connection.cpp  test_rs485.cpp
